<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditCardActivity">

    <TextView
        android:id="@+id/card_edit_label_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/card_number"
        app:layout_constraintEnd_toStartOf="@+id/card_edit_text_number"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_edit_label_name" />

    <TextView
        android:id="@+id/card_edit_label_validity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/card_validity"
        app:layout_constraintEnd_toStartOf="@+id/card_edit_text_validity"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_edit_label_number" />

    <TextView
        android:id="@+id/card_edit_label_cvv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/card_cvv"
        app:layout_constraintEnd_toStartOf="@+id/card_edit_text_cvv"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_edit_label_validity" />

    <EditText
        android:id="@+id/card_edit_text_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/card_number"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/card_edit_label_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/card_edit_label_number"
        app:layout_constraintTop_toTopOf="@+id/card_edit_label_number" />

    <EditText
        android:id="@+id/card_edit_text_validity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/card_validity"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/card_edit_label_validity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/card_edit_label_validity"
        app:layout_constraintTop_toTopOf="@+id/card_edit_label_validity" />

    <EditText
        android:id="@+id/card_edit_text_cvv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/card_cvv"
        android:importantForAutofill="no"
        android:inputType="textVisiblePassword|textPassword"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/card_edit_label_cvv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/card_edit_label_cvv"
        app:layout_constraintTop_toTopOf="@+id/card_edit_label_cvv" />

    <TextView
        android:id="@+id/card_edit_label_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/card_name"
        app:layout_constraintEnd_toStartOf="@+id/card_edit_text_name"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/card_edit_text_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/card_name"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/card_edit_label_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/card_edit_label_name"
        app:layout_constraintTop_toTopOf="@+id/card_edit_label_name" />

    <Button
        android:id="@+id/card_edit_button_show"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:onClick="onSaveHandler"
        android:text="@string/save"
        app:layout_constraintEnd_toStartOf="@+id/card_edit_button_edit"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_edit_error" />

    <Button
        android:id="@+id/card_edit_button_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onCancelHandler"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="@+id/card_edit_button_show"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/card_edit_button_show"
        app:layout_constraintTop_toTopOf="@+id/card_edit_button_show"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/card_edit_error"
        android:layout_width="58dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:textAlignment="center"
        android:textColor="#FF0000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_edit_label_cvv" />


</androidx.constraintlayout.widget.ConstraintLayout>
